chore: revert unrelated changes to spring upgrade